# src/validators/auth.validator.ts
@@ -1,0 +1,7 @@
+import { body } from "express-validator";
+
+export const loginValidator = [
+  body("email").isEmail().withMessage("Email invalido").normalizeEmail(),
+  body("password").isString().notEmpty().withMessage("Password requerido")
+];
+
